syntax = "proto3";
package mantrachain.guard.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mantrachain/guard/v1/params.proto";
import "mantrachain/guard/v1/acc_perm.proto";
import "mantrachain/guard/v1/guard_transfer.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/LimeChain/mantrachain/x/guard/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mantrachain/guard/v1/params";
  }
  // Queries a AccPerm by index.
	rpc AccPerm(QueryGetAccPermRequest) returns (QueryGetAccPermResponse) {
		option (google.api.http).get = "/mantrachain/guard/v1/acc_perm/{cat}";
	}

	// Queries a list of AccPerm items.
	rpc AccPermAll(QueryAllAccPermRequest) returns (QueryAllAccPermResponse) {
		option (google.api.http).get = "/mantrachain/guard/v1/acc_perm";
	}

// Queries a GuardTransfer by index.
	rpc GuardTransfer(QueryGetGuardTransferRequest) returns (QueryGetGuardTransferResponse) {
		option (google.api.http).get = "/mantrachain/guard/v1/guard_transfer";
	}
// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetAccPermRequest {
	  string cat = 1;

}

message QueryGetAccPermResponse {
	AccPerm acc_perm = 1 [(gogoproto.nullable) = false];
}

message QueryAllAccPermRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAccPermResponse {
	repeated AccPerm acc_perm = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetGuardTransferRequest {}

message QueryGetGuardTransferResponse {
	GuardTransfer GuardTransfer = 1 [(gogoproto.nullable) = false];
}
// this line is used by starport scaffolding # 3
